feat: add player inventory gacha (#8)
